--- a/summaryForm.html
+++ b/summaryForm.html
@@ -41,30 +41,36 @@
 
             <div class="pt-5 mt-3">
               <h1 class="headingrand clr-dark1">
-                It was so nice getting to know Shelby!
+                It was so nice getting to know Shelby, Snow.
               </h1>
-              <p class="spansubhead">Let’s start building a box for Snow!</p>
+              <p class="spansubhead">
+                Now, let’s give you a sniff! We can’t wait to send out the
+                amazing packages we have for Shelby and Snow.
+              </p>
             </div>
 
-            <div class="catoImg">
-              <img src="/img/cato.svg" class="w-100" alt="" />
-            </div>
-
-            <div class="d-flex justify-content-start">
-              <button
-                class="buttn-main bg-dark2 clr-white my-4 start-btn w-100"
-              >
-                Start Now
-              </button>
+            <div class="catoImg2">
+              <img src="/img/cato2.svg" class="w-100" alt="" />
             </div>
           </div>
         </div>
         <!-- Pet Selection Form-1 -->
         <div class="col-md-6 d-flex justify-content-center align-items-center">
           <div class="sectionPadding">
-            <div class="giftBoxImg">
-              <img src="/img/giftbox.webp" class="w-100" alt="" />
+            <div class=" ">
+                <h1 class="headingrand pt-4 clr-dark1">Now the most important bit. You.</h1>
             </div>
+
+            <div class="summaryForm">
+                <input type="text" name="" id="selection-inp" class="w-100 my-3" placeholder="Full Name">
+                <input type="text" name="" id="selection-inp" class="w-100 my-3" placeholder="Phone Number">
+                <input type="text" name="" id="selection-inp" class="w-100 my-3" placeholder="Email Address">
+                <input type="text" name="" id="selection-inp" class="w-100 my-3" placeholder="Password">
+            </div>
+
+            <div class="d-flex justify-content-center"><button class="buttn-main bg-dark2 clr-white my-4 start-btn w-100">Procees To Summary</button></div>
+
+
           </div>
         </div>
       </div>
