--- a/signUp.html
+++ b/signUp.html
@@ -41,17 +41,25 @@
             <div class=""><img src="/img/Furly-Logo.svg" alt="" /></div>
 
             <div class="pt-5 mt-3">
-              <h4 class="loginTitle text-center">Sign In</h4>
+              <h4 class="loginTitle text-center">Sign Up</h4>
             </div>
 
             <div class="summaryForm">
+                <div class="row">
+                    <div class="col-md-6">
+                        <input type="text" name="" id="selection-inp" class="w-100 my-3" placeholder="First Name">
+                    </div>
+                    <div class="col-md-6">
+                        <input type="text" name="" id="selection-inp" class="w-100 my-3" placeholder="Last Name">
+                    </div>
+                </div>
                 <input type="text" name="" id="selection-inp" class="w-100 my-3" placeholder="Email">
                 <input type="text" name="" id="selection-inp" class="w-100 my-3" placeholder="Password">
-                <div class="forgorPassword py-3" ><a href="" class="ancherClrOrng">Forgot Password ?</a></div>
+                <div class="d-flex align-items-center py-3"> <input type="checkbox" name="" id=""> <span class="ps-2">Sign me up for updates from Furly</span> </div>
                 <div class="pt-5"><hr></div>
             </div>
 
-            <div class="loginInfo d-flex justify-content-center align-items-center"><span>New Here ?</span> <span><a href="" class="ancherClrOrng ps-2" > <strong>Sign Up</strong></a></span></div>
+            <div class="loginInfo d-flex justify-content-center align-items-center"><span>Already have an account ?</span> <span><a href="" class="ancherClrOrng ps-2" > <strong>Log In</strong></a></span></div>
 
             <div class="py-5"><p>By clicking on “Continue”, you agree to our <strong>Terms</strong> and <strong>Privacy Policy</strong></p></div>
      
