--- a/login.html
+++ b/login.html
@@ -57,11 +57,10 @@
      
 
             <div class="d-flex justify-content-start">
-              <button
-                class="buttn-main bg-dark2 clr-white my-4 start-btn w-100"
-              >
+              <a href=""
+                class="buttn-main bg-dark2 clr-white my-4 start-btn w-100">
                 Continue
-              </button>
+              </a>
             </div>
           </div>
         </div>
@@ -71,7 +70,7 @@
         <div class="col-md-6 d-flex justify-content-start align-items-center bgOrange">
           <div class="sectionPadding">
             <div class="giftBoxImg">
-              <img src="/img/dogImg.svg" class="w-100" alt="" />
+              <img src="img/dogImg.svg" class="w-100" alt="" />
             </div>
           </div>
         </div>
