--- a/checkOutPage1.html
+++ b/checkOutPage1.html
@@ -39,7 +39,7 @@
         <div class="col-lg-6 col-md-12 bgWhite">
 
           <div class="pets-infoBox sectionPadding">
-            <div class=""><img src="/img/Furly-Logo.svg" alt="" /></div>
+            <div class=""><img src="img/Furly-Logo.svg" alt="" /></div>
 
             <div class="pt-5 mt-3">
                 <h1 class="headingrand clr-dark1">Almost there!</h1>
@@ -47,7 +47,7 @@
             </div>
             <!-- ===== -->
             <div class="buyBoxes py-3">
-                <div class="crossBtn d-flex justify-content-end pe-3"><img src="/img/cross.svg" class="" alt=""></div>
+                <div class="crossBtn d-flex justify-content-end pe-3"><img src="img/cross.svg" class="" alt=""></div>
                 
                 <div class="row">
                     <div class="col-md-6 my-3">
@@ -513,7 +513,7 @@
         <div id="subModel-2" class=" col-lg-6 col-md-12 bgOrangeDark subscriptionModel ">
             <div class="sectionPadding">
               
-              <div class="mt-5 d-flex align-items-center"><img src="/img/shelby's-box.svg" alt=""><h1 class="headingrand text-light ps-5">Here’s your furlys</h1></div>
+              <div class="mt-5 d-flex align-items-center"><img src="img/shelby's-box.svg" alt=""><h1 class="headingrand text-light ps-5">Here’s your furlys</h1></div>
   
               <div class="boxTabsSection py-3">
   
