--- a/summaryForm.html
+++ b/summaryForm.html
@@ -61,7 +61,7 @@
                 <h1 class="headingrand pt-4 clr-dark1">Now the most important bit. You.</h1>
             </div>
 
-            <div class="summaryForm">
+            <div class="summaryForm d-flex flex-column justify-content-center">
                 <input type="text" name="" id="selection-inp" class="w-100 my-3" placeholder="Full Name">
                 <input type="text" name="" id="selection-inp" class="w-100 my-3" placeholder="Phone Number">
                 <input type="text" name="" id="selection-inp" class="w-100 my-3" placeholder="Email Address">
