--- a/thankYouPage.html
+++ b/thankYouPage.html
@@ -51,10 +51,10 @@
 
                     <div class="circle"><img src="img/iconNeg.svg" alt=""></div>
 
-                        <div class="box box-1">
+                        <div class="boxTyp box-1">
                             <div class="text-center"><h2>Shelby</h2></div>
                         </div>
-                        <div class="box box-2">
+                        <div class="boxTyp box-2">
                             <div class="text-center"><h2>Snow</h2></div>
                         </div>
                 
