--- a/boxBuilding.html
+++ b/boxBuilding.html
@@ -37,7 +37,7 @@
       <div class="row">
         <div class="col-lg-6 col-md-12 bgWhite">
           <div class="pets-infoBox sectionPadding">
-            <div class=""><img src="/img/Furly-Logo.svg" alt="" /></div>
+            <div class=""><img src="img/Furly-Logo.svg" alt="" /></div>
 
             <div class="pt-5 mt-3">
               <h1 class="headingrand clr-dark1">
@@ -47,7 +47,7 @@
             </div>
 
             <div class="catoImg">
-              <img src="/img/cato.svg" class="w-100" alt="" />
+              <img src="img/cato.svg" class="w-100" alt="" />
             </div>
 
             <div class="d-flex justify-content-start">
@@ -63,7 +63,7 @@
         <div class="col-md-6 d-flex justify-content-center align-items-center">
           <div class="sectionPadding">
             <div class="giftBoxImg">
-              <img src="/img/giftbox.webp" class="w-100" alt="" />
+              <img src="img/giftbox.webp" class="w-100" alt="" />
             </div>
           </div>
         </div>
