--- a/singleProduct.html
+++ b/singleProduct.html
@@ -146,12 +146,23 @@
                             <div class="conditions-list d-flex flex-wrap align-items-center justify-content-between pe-3">
 
                                 <div class="filled-bar bg-dark2 clr-white">
-                                    <span>Dull and empty</span>
-                                    <span class="ms-5">Halfway Full</span>
+                                    <span>20 Durham</span>
+                                    <span class="ms-5">50 Durham</span>
                                 </div>
                                 <div><span class="clr-white">100 Durham</span></div>
                             </div>
-                        </div>
+                        </div> 
+                        <div class="col-lg-11 col-md-11 mb-3">
+                           
+                                <div class="slide-progress mt-5 bg-white" >
+                                    <div class="row pt-2">
+                                        <div class="col-md-4 amountProgressCol"><span class="amountProgress" >20 Durham</span></div>
+                                        <div class="col-md-4 amountProgressCol"><span class="amountProgress">50 Durham</span></div>
+                                        <div class="col-md-4 amountProgressCol"><span class="amountProgress">100 Durham</span></div>
+                                    </div>
+                                    <div class="amountProgressBar"></div>
+                                </div>
+                        
                     </div>
                     <!-- ========= -->
 
