--- a/profilePage.html
+++ b/profilePage.html
@@ -593,6 +593,22 @@
                                             </div>
                                         </div>
                                     </div>
+                                      <!-- ========================= -->
+                                      
+                                      <!-- ========================= -->
+                                      
+                                      <div class="orders my-3">
+                                        <div class="row align-items-center">
+                                            <div class="col-md-4 boxBox"><div class="Order-boxImg"><img src="./img/thanksBox.svg" class="w-100" alt=""></div></div>
+                                            <div class="col-md-5">
+                                                <h4 class="order-subTitles clr-dark1">Premium</h4>
+                                                <span class="orderDate">2-3-2021</span>
+                                            </div>
+                                            <div class="col-md-3">
+                                                <h4 class="order-subTitles">2 Items</h4>
+                                            </div>
+                                        </div>
+                                    </div>
 
                                       <!-- ========================= -->
                                       <div class="orders my-3">
